update for JDK 21
- fix async http client future return
- update JDK 21 to support Virtual Thread.